fixed bug: footer alignment in desktop

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -313,7 +313,10 @@ p {
   border: 1px solid black;
   padding: 2px;
   margin: 1px;
-  margin-left: 21px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  width: fit-content;
 }
 .link-box:hover {
   background: rgb(0, 0, 0, 0.25);
@@ -323,10 +326,13 @@ p {
   width: 14px;
   height: 14px;
   align-self: center;
+  margin-right: 2px;
 }
 .footer-contact p {
-  margin-left: 10px;
   font-size: 1.2rem;
+}
+.footer-text {
+  margin-bottom: 16px;
 }
 
 @media screen and (min-width: 443px) {
@@ -343,7 +349,10 @@ p {
     align-items: center;
   }
   .link-box {
-    display: flex;
-    justify-content: space-between;
+    margin-left: 21px;
+  }
+  .footer-text {
+    margin-right: 10px;
+    margin-bottom: 0;
   }
 }
